css/buddypress.css
/* ... */
			#buddypress .dir-list .item-list > li .item-title {
				margin-top: .25em;
			}

			#buddypress .dir-list .item-list > li.has-actions .item-title {
				padding-right: 32px; /* for button.action-toggle */
			}

				#buddypress .dir-list .item-list > li .item-title a {
					display: inline-block;
					width: 100%;
				}

			#buddypress .dir-list .item-list > li .item-meta {
				margin-top: .5em;
				word-wrap: break-word;
			}

/* Breakpoint 1 */
@media screen and (min-width: 561px) {
	#buddypress #item-header-avatar {
		top: -135px;
	}

		#buddypress #item-header-avatar .item-avatar {
			width: 156px;
			height: 156px;
		}

	.js #buddypress #item-actions {
		top: 57px;
		right: 7px;
	}

	.item-actions-toggled #buddypress #item-actions {
		top: 67px; /* Animate position */
	}

		.js #buddypress #item-actions:before {
			right: 23px;
		}

	#buddypress .item-actions-toggle {
		top: 7px;
		right: 7px;
		width: 46px;
		height: 46px;
		padding: 13px;
		line-height: 46px;
	}
}

/* Breakpoint 2 */
@media screen and (min-width: 741px) {
	.bp-user .entry-header {
		text-align: left;
		padding-left: 75px;
	}

	#buddypress #item-header-avatar {
		top: 0px;
		left: auto;
		right: 100%;
		width: auto;
		margin: 0;
		-webkit-transform: translateX(95px) translateY(20px);
		transform: translateX(95px) translateY(20px);
	}

		#buddypress #item-header-avatar .item-avatar {
			width: 116px;
			height: 116px;
		}

	#buddypress #item-header-content {
		text-align: left;
	}
}

/* 174 + (126 - 25) + 640 = 949px + 17 for the scrollbar = 962px */
@media screen and (min-width: 932px) {
	.bp-user .entry-header {
		padding-left: 0px;
	}

	#buddypress #item-header-avatar {
		-webkit-transform: translateX(25px) translateY(15px);
		transform: translateX(25px) translateY(15px);
	}

		#buddypress #item-header-avatar .item-avatar {
			width: 126px;
			height: 126px;
		}
}

@media screen and (min-width: 998px) {
	.bp-user .entry-header {
		padding-left: 75px;
	}

	body.with-sidebar #buddypress #item-header-avatar {
		-webkit-transform: translateX(95px) translateY(20px);
		transform: translateX(95px) translateY(20px);
	}

		#buddypress #item-header-avatar .item-avatar {
			width: 116px;
			height: 116px;
		}
}

/* 174 + (126 - 25) + 640 + 290 = 1205 + 17 for the scrollbar = 1222px */
@media screen and (min-width: 1222px) {
	.bp-user .entry-header {
		padding-left: 0px;
	}

	body.with-sidebar #buddypress #item-header-avatar {
		-webkit-transform: translateX(25px) translateY(15px);
		transform: translateX(25px) translateY(15px);
	}

		body.with-sidebar #buddypress #item-header-avatar .item-avatar {
			width: 126px;
			height: 126px;
		}
}

/* Up to Breakpoint 2. .fixed-bp-single-item appears only on small screens! */
@media screen and (max-width: 740px) {
	body.fixed-bp-single-item .entry-header {
		position: fixed;
		top: 62px;
		left: 0;
		right: 0;
		height: 55px;
		font-size: 1rem;
		padding: 11px 58px 11px 68px; /* 15px|25px + 32px + 11px */
		overflow: hidden;
		background: #fff;
		border-bottom: 1px solid #f9f9f9;
		text-align: left;
		-moz-box-shadow: 0 0 5px rgba(64, 64, 64, .5);
		-webkit-box-shadow: 0 0 5px rgba(64, 64, 64, .5);
		box-shadow: 0 0 5px rgba(64, 64, 64, .5);
		z-index: 10; /* along with #item-header-avatar */
	}

	body.fixed-bp-single-item .entry-title {
		font-size: 1em;
	}

	body.fixed-bp-single-item .entry-meta {
		margin-top: -4px;
		font-size: .8em;
	}

		body.fixed-bp-single-item .entry-meta > span {
			display: inline;
		}

	body.fixed-bp-single-item .entry-title,
	body.fixed-bp-single-item .entry-meta {
		text-align: left;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}

	body.fixed-bp-single-item #buddypress #item-header-avatar {
		position: fixed;
		top: 73px;
		left: 25px;
		transform: none;
	}

		body.fixed-bp-single-item #buddypress #item-header-avatar .item-avatar {
			width: 32px;
			height: 32px;
			padding: 0;
		}

			body.fixed-bp-single-item #buddypress #item-header-avatar .item-avatar,
			body.fixed-bp-single-item #buddypress #item-header-avatar img.avatar {
				border-radius: 4px; /* rounded square */
			}

		body.fixed-bp-single-item #buddypress #item-header-avatar .change-avatar {
			display: none;
		}

	body.fixed-bp-single-item #buddypress .item-actions-toggle {
		position: fixed;
		top: 73px;
		z-index: 10;
	}

		body.js.fixed-bp-single-item #buddypress #item-actions {
			position: fixed;
			top: 116px;
			z-index: 9;
		}

		body.js.fixed-bp-single-item.item-actions-toggled #buddypress #item-actions {
			top: 126px;
		}

	/* Animation */
	body.fixed-bp-single-item .entry-header,
	body.fixed-bp-single-item #buddypress #item-header-avatar,
	body.fixed-bp-single-item #buddypress .item-actions-toggle {
		-webkit-animation: slide-bp-fixed-entry-header .3s ease;
		animation: slide-bp-fixed-entry-header .3s ease;
	}

	@-webkit-keyframes slide-bp-fixed-entry-header {
		0% {	transform: translateY( -55px ); }
		100% {  transform: translateY( 0px ); }
	}

	@keyframes slide-bp-fixed-entry-header {
		0% {	transform: translateY( -55px ); }
		100% {  transform: translateY( 0px ); }
	}
}

/* Breakpoint 1 up to Breakpoint 2 */
@media screen and (min-width: 561px) and (max-width: 740px) {
	body.fixed-bp-single-item .entry-header {
		top: 76px;
		padding: 11px 91px 11px 78px;
	}

	body.fixed-bp-single-item #buddypress #item-header-avatar {
		top: 87px;
		left: 35px;
	}

	body.fixed-bp-single-item #buddypress .item-actions-toggle {
		top: 87px;
		right: 48px;
		/* Shrink button again */
		width: 32px;
		height: 32px;
		padding: 5px;
		line-height: 32px;
	}

		body.fixed-bp-single-item #buddypress #item-actions {
			top: 130px;
			right: 42px;
		}

		body.js.fixed-bp-single-item.item-actions-toggled #buddypress #item-actions {
			top: 140px;
		}
}
/* ... */

